feat: content -> anti-débordement des sprites

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Space Invader</title>
+    <title>Space Invaders</title>
 </head>
 <body>
-    
+    <!-- Key Numbers : 
+        Z // Flèche haut // Pavé 8 :: 90 // 38 // 104
+        Q // Flèche gauche // Pavé 4 : 81 // 37 // 100
+        S // Flèche bas // Pavé 2: 83 // 40 // 98
+        D // Flèche droite // Pavé 6: 68 // 39 // 102
+        Space // Pavé 5: 32 // 101 -->
 
     <script src="./app.js"></script>
 </body>
